new default background color

--- a/default.css
+++ b/default.css
@@ -1,6 +1,6 @@
 :root {
     --anymapper-primary-fg-color: white;
-    --anymapper-primary-bg-color: brown;
+    --anymapper-primary-bg-color: #2a3ca5;
     --anymapper-normal-fg-color: black;
     --anymapper-light-fg-color: #888;
     --anymapper-normal-bg-color: white;
