--- a/default.css
+++ b/default.css
@@ -7,6 +7,7 @@
     --anymapper-background-color: #CCC;
     --anymapper-float-box-shadow: 1px 1px 8px 2px rgba(0, 0, 0, 0.25);
     --anymapper-float-border-radius: 4px;
+    --anymapper-side-sheet-width: 350px;
     --anymapper-mobile-bottom-sheet-height: 110px;
 	--anymapper-omnibox-margin: 10px;
 }
